# rabuka_reloaded

./: .gitignore  ABILITIES_ANALYSIS_COMPLETE.md  ABILITY_IMPLEMENTATION_REPORT.md  ABILITY_TESTING_FRAMEWORK.md  ABILITY_TYPES_MASTER_LIST.md  ABILITY_VERIFICATION_REPORT.md  CONSOLIDATED_ANALYSIS.md  ENGINE_OVERHAUL.md  GAME_MECHANICS_NOTES.md  IMPLEMENTATION_COMPLETE.md  MISSING_FEATURES.md  PARSER_ENGINE_ALIGNMENT_SUMMARY.md  PARSER_ENGINE_GAPS.md  PARSER_ENGINE_ISSUES.md  RULES_ANALYSIS.md  TESTS_COMPLETE.md  WINNING_STRATEGY_GUIDE.md  abilities_parsing_errors.md  ability_tester.py  analyze_abilities.py  analyze_action_execution.py  card_id_mapping.json  check_high_usage_actions.py  check_images.js  check_missing_mappings.py  check_remaining_actions.py  check_remaining_mappings.py  check_truly_missing.py  clear_rooms_test.js  compare_fields.py  debug_actions.js  debug_frontend.js  debug_frontend_state.js  debug_room_issue.js  extract_actions.py  extract_fields.py  fast_game_tools.py  find_missing_field_examples.py  game_player.py  missing_qa_tests.txt  (+19 more)
engine/: ABILITY_CLEANUP_PLAN.md  ABILITY_COMPARISON_ANALYSIS.md  ABILITY_FIELD_REQUIREMENTS.md  ABILITY_GAMEPLAY_TEST_PLAN.md  ABILITY_GAMEPLAY_TEST_RESULTS.md  ABILITY_SYSTEM_ISSUES.md  Cargo.toml  ENGINE_STATUS.md  GAMEPLAY_ISSUES.md  GAME_ANALYSIS.md  IMPROVEMENT_TESTING_GUIDE.md  INTERACTIVE_HEADLESS_README.md  PARSER_ENGINE_GAP_ANALYSIS.md  PENDING_FEATURES.md  RULES_VALIDATION.md  ability_execution_trace.txt  analyze_all_abilities.py  build_errors.txt  card_id_mapping.json  cargo_warnings.txt  compilation_errors.txt  detailed_errors.txt  error_log.txt  errors.txt  output.txt  start_server.bat  test_errors.txt  test_output.txt  test_results.txt  verify_fix.md
engine/benches/: performance.rs
engine/rules/: rules_1_05.txt
engine/src/: ability_queue.rs  ability_resolver.rs  actual_gameplay_test.rs  card.rs  card_loader.rs  card_matching.rs  check_timing.rs  cheer_system.rs  constants.rs  deck_builder.rs  deck_parser.rs  events.rs  fix_broken.py  fix_final.py  fix_orphaned.py  fix_pending.py  fix_pending2.py  fix_pending3.py  fix_pending_manual.py  game_setup.rs  game_state.rs  integration_test.rs  lib.rs  main.rs  player.rs  real_ability_test.rs  real_gameplay_test.rs  run_qa_tests.rs  selection_system.rs  simple_fix.py  simple_gameplay_test.rs  test_ability_verification.rs  test_comprehensive_abilities.rs  transaction.rs  triggers.rs  turn.rs  web_server.rs  working_ability_test.rs  working_gameplay_test.rs  zones.rs
engine/tests/: GAMEPLAY_TEST_FRAMEWORK.md  OPPONENT_INTERACTION_ANALYSIS.md  QA_TEST_FRAMEWORK.md  ability_integration_tests.rs  activation_cost_and_effect.rs  ai_temporal_condition_draw_until_plan.md  check_complex_abilities.rs  engine_flaw_tests.rs  fix_strings.py  hanayo_sequential_cost_plan.md  honoka_discard_until_count_plan.md  kanon_choice_effect_plan.md  kaoru_reveal_and_search_plan.md  kasumi_optional_cost_plan.md  qa_individual_tests.rs  real_ability_tests.rs  realistic_gameplay_tests.rs  rin_activation_cost_plan.md  rina_conditional_cost_effect_plan.md  rurino_gain_resource_duration_plan.md  shiki_position_change_plan.md  test_ability_effects_persist.rs  test_ability_loading.rs  test_ability_system.rs  test_basic_ability_resolution.rs  test_basic_game_situations.rs  test_card_movement.rs  test_choices.rs  test_complex_abilities.rs  test_legal_actions.rs  test_opponent_interaction.rs  test_qa_data.rs  (+4 more)
test_sequential/: Cargo.toml
tests/: Cargo.toml  mod.rs  test_all_features.rs  test_check_timing.rs  test_cheer_system.rs  test_choice_abilities.rs  test_dynamic_counts.rs  test_look_and_select.rs
(+860 files in other folders)
