[package]
name = "rabuka_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
actix-web = "4.4"
actix-cors = "0.6"
actix-files = "0.6"
tokio = { version = "1.35", features = ["full"] }
smallvec = "1.11"

[dev-dependencies]
criterion = "0.5"
rayon = "1.8"
rand_chacha = "0.3"

[[bench]]
name = "performance"
harness = false

[[bin]]
name = "run_qa_tests"
path = "src/run_qa_tests.rs"
